test/fixtures/esprima/invalid-syntax/.migrated_0041/actual.js
var source = 'var x = /[a-z]/\\ux';
